# sqlink

./: .actrc  .gitignore  .gitmodules  404.html  ARCHITECTURE.md  AUTHORING-DOTCMD-COMPONENTS.md  AUTHORING-FIJI-FUNCTIONS.md  AUTHORING-RUN-COMPONENTS.md  CI.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PLAN-bake-in.md  PLAN-benchmarks.md  PLAN-browser-runtime.md  PLAN-cas-cache.md  PLAN-cleanup.md  PLAN-cli-commands.md  PLAN-cli-persistence.md  PLAN-cli-shared-conn.md  PLAN-cli-stages-5-6.md  PLAN-component-cache.md  PLAN-compose-integration.md  PLAN-dispatch-followups.md  PLAN-dotcmd-phase5.md  PLAN-dotcmd-plugins.md  PLAN-embed-extensions.md  PLAN-extensions-and-handlers.md  PLAN-extensions-batch-2.md  PLAN-extensions-followups.md  PLAN-final-threads.md  PLAN-gaps.md  PLAN-grants-db.md  PLAN-interactive-capture.md  PLAN-latent-cleanup.md  PLAN-more-extensions-2.md  PLAN-more-extensions-4.md  PLAN-more-extensions-5.md  (+25 more)
.cargo/: config.toml  config.toml.template
analysis/: README.md  gap-inventories.json  gap-report.json
browser/: .gitignore  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
cli/: Cargo.toml  README.md  sqlite-wasm-ext
cli-rust/: Cargo.toml
cli-rust/src/: bindings.rs  db.rs  dot.rs  format.rs  lib.rs  settings.rs  state.rs
cli/.cargo/: config.toml  config.toml.template
cli/src/: dot.rs  format.rs  grants.rs  lib.rs  orchestration.rs  settings.rs  sqlink_registry.rs  vtab.rs
composition-plans/: README.md  mobilitydb-shim.plan.json  postgis-shim.plan.json  sqlink-runtime.plan.json
core/: Cargo.toml  build.rs
core/src/: db.rs  lib.rs
demo/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
docs/: postgis-mobilitydb-integration.md
examples/: sqlite-utils-tour.sql
extensions-site/: .gitignore  Dockerfile  README.md  build.py  cloudbuild.yaml  sync-r2.sh
extensions/aba/: Cargo.toml  smoke.expected  smoke.sql
extensions/aba/src/: embed.rs  lib.rs
extensions/aead/: Cargo.toml  smoke.expected  smoke.sql
extensions/aead/src/: lib.rs
extensions/aes-modes/: Cargo.toml  smoke.expected  smoke.sql
extensions/aes-modes/src/: lib.rs
extensions/archive-cli/: Cargo.toml
extensions/archive-cli/src/: lib.rs
extensions/arrow/: Cargo.toml
extensions/arrow/src/: lib.rs
extensions/asn1/: Cargo.toml  smoke.expected  smoke.sql
extensions/asn1/src/: lib.rs
extensions/avro/: Cargo.toml
extensions/avro/src/: embed.rs  lib.rs
extensions/baseN/: Cargo.toml  smoke.sql
extensions/baseN/src/: embed.rs  lib.rs
extensions/bencode/: Cargo.toml
extensions/bencode/src/: embed.rs  lib.rs
extensions/bibcodes/: Cargo.toml  smoke.expected  smoke.sql
extensions/bibcodes/src/: lib.rs
extensions/bic/: Cargo.toml  smoke.expected  smoke.sql
extensions/bic/src/: embed.rs  lib.rs
extensions/bignum/: Cargo.toml  smoke.expected  smoke.sql
extensions/bignum/src/: lib.rs
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/fuzz_targets/: bundle_cli_argv.rs  bundle_save_set_hash.rs  cas_put_bytes_roundtrip.rs  parse_duration.rs  parse_load_args.rs  policy_check_manifest.rs  spawn_build_path_validation.rs  sqlink_cli_argv.rs
host/: AGGREGATE-DISPATCH.md  COMPOSE-PROTOCOL.md  Cargo.toml  README.md  SPI-LIVE-ARCHITECTURE.md  SPI-LIVE.md  SPI.md  build.rs
host/src/: cache.rs  component_blob_cache.rs  compose_provider.rs  http_resident.rs  lib.rs  main.rs  policy.rs  prefix_registry.rs  s3.rs  s3_resident.rs  session_ffi.rs  typed_value.rs  vtab.rs
host/tests/: auth_extension.rs  composed_cli_matrix.rs  dynlink_provider_matrix.rs  ed25519_trust_gate.rs  lib_rust.rs  load.rs  load_collision.rs  parser.rs  parser_dplyr.rs  parser_prql.rs  provider_backed_dispatch.rs  resident_provider_coherence.rs  runnable_sqlite_demo.rs  sqlite_lib.rs  sqlite_wasm_wrapper.rs  tvm_combined_capacity.rs  tvm_pcache_capacity.rs  tvm_pcache_probe.rs  tvm_substrate_probe.rs  tvm_vfs_capacity.rs  tvm_vfs_probe.rs
host/wit/openssl/: digest.wit  error.wit  pkey.wit  world.wit
scripts/: build.sh  (+14 more)
sqlink-loader/: Cargo.toml  DESIGN.md
sqlink-loader/src/: api.rs  lib.rs  load.rs  register.rs  state.rs  value.rs  vtab.rs
sqlink-native/: Cargo.toml
sqlink-native/src/: main.rs
sqlink-parsers/: Cargo.toml
sqlink-parsers/src/: bundle_cli_argv.rs  duration.rs  lib.rs  load_args.rs  spawn_build_validation.rs
sqlite-cas-cache/: Cargo.toml
sqlite-cas-cache/src/: bundles.rs  bundles_exec.rs  lib.rs  resolver.rs  schema.rs  store.rs
sqlite-cas-cache/tests/: blob_backend.rs  bundles.rs  eviction.rs  migration.rs  resolver.rs  schema_parity.rs  store.rs
sqlite-embed/: Cargo.toml
sqlite-embed/src/: lib.rs
sqlite-lib/: Cargo.toml
sqlite-lib/.cargo/: config.toml.template
sqlite-lib/src/: lib.rs  state.rs
sqlite-mem-tvm/: Cargo.toml
sqlite-mem-tvm/src/: lib.rs
sqlite-mem-tvm/tests/: serves_real_sqlite.rs
sqlite-pcache-tvm/: Cargo.toml
sqlite-pcache-tvm/src/: cache.rs  lib.rs  region.rs  wit_tvm_region.rs
sqlite-pcache-tvm/tests/: serves_real_sqlite.rs
sqlite-pcache-tvm/wit/: tvm.wit
sqlite-tvm-bindings/: Cargo.toml
sqlite-tvm-bindings/src/: lib.rs
sqlite-tvm-bindings/wit/: tvm.wit
sqlite-vfs-tvm/: Cargo.toml
sqlite-vfs-tvm/src/: lib.rs  storage.rs  wit_tvm_storage.rs
sqlite-vfs-tvm/tests/: serves_real_sqlite.rs
sqlite-wasm-httpd/: Cargo.toml  README.md
sqlite-wasm-httpd/handlers/auth/: Cargo.toml  build.sh  smoke.sh
sqlite-wasm-httpd/handlers/auth/src/: lib.rs
sqlite-wasm-httpd/handlers/echo/: Cargo.toml  build.sh
sqlite-wasm-httpd/handlers/echo/.cargo/: config.toml
sqlite-wasm-httpd/handlers/echo/src/: lib.rs
sqlite-wasm-httpd/handlers/markdown/: build.sh
sqlite-wasm-httpd/handlers/markdown/src/: lib.rs
sqlite-wasm-httpd/handlers/registry/: Cargo.toml  README.md  build.sh
sqlite-wasm-httpd/handlers/registry/src/: lib.rs
sqlite-wasm-httpd/handlers/sql/: Cargo.toml  build.sh
sqlite-wasm-httpd/handlers/sql/src/: lib.rs
sqlite-wasm-httpd/handlers/yaml-to-json/: Cargo.toml
sqlite-wasm-httpd/src/: db.rs  main.rs  router.rs  routes.rs  wasm.rs
(+1249 files in other folders)
