[workspace]
resolver = "2"

# In-repo crates. `sqlite-loader-wit` lives in a git submodule
# (https://github.com/tegmentum/sqlite-loader-wit); host consumes
# it via path dep but it's not a workspace member — we don't own
# that tree.
members = [
    "core",
    "cli",
    "sqlite-lib",
    "host",
    "sqlite-pcache-tvm",
    "sqlite-mem-tvm",
    "sqlite-vfs-tvm",
    "sqlite-tvm-bindings",
    "sqlite-cas-cache",
    "sqlite-embed",
    "sqlite-wasm-httpd",
    "extensions/json1",
    "extensions/csv",
    "extensions/math",
    "extensions/crypto",
    "extensions/uuid",
    "extensions/regexp",
    "extensions/stats",
    "extensions/postgis-bridge",
    "examples/rust/runnable-sqlite-demo",
]
exclude = [
    # extensions/* with their own [workspace] are intentionally
    # standalone  see the dedupe + survey commits. Keep this list
    # in sync as new standalone crates land.
    "extensions/color",
    "extensions/formats",
    "extensions/iban",
    "extensions/sys-compat",
    "extensions/list",
]

# `cargo build` / `cargo test` at the workspace root operate on
# the native crates only. The wasm crates (cli, sqlite-lib) are
# workspace members so they share the lockfile and dependency
# resolution, but they need `--target wasm32-wasip2` and the
# wasi-sdk env, so building them by default from the root would
# trip on the C compiler. To build them explicitly:
#
#   cd cli && cargo build --release           # uses per-crate .cargo/config.toml
#   cargo build -p sqlite-cli --target wasm32-wasip2  # from root
default-members = ["core", "host"]

# Workspace-level release-profile tuning. LTO collapses sqlite3 +
# rust glue + extension thunks across crate boundaries; codegen-units=1
# unlocks more aggressive inlining at the cost of build parallelism
# (~30 s slower clean builds, but the cli's hot loop is sqlite3
# internal code where every fold helps).
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false
strip = true
