[workspace]
resolver = "2"

# Submodules (NOT workspace members — they own their own
# Cargo.toml):
#   * `sqlite-loader-wit/`  the WIT contract every extension
#     speaks. https://github.com/tegmentum/sqlite-loader-wit
#   * `sqlite-wasm/`  componentized SQLite building blocks
#     (sqlite-component-core + the TVM modules + sqlite-embed).
#     https://github.com/tegmentum/sqlite-wasm
#
# sqlite-wasm/* crates are NOT workspace members of sqlink;
# they're members of sqlite-wasm's own workspace. sqlink crates
# depend on them via path = "../sqlite-wasm/<crate>".
members = [
    "cli",
    "host",
    "sqlink-loader",
    "sqlink-native",
    "sqlite-cas-cache",
    "sqlink-httpd",
    "extensions/json1",
    "extensions/csv",
    "extensions/math",
    "extensions/crypto",
    "extensions/uuid",
    "extensions/regexp",
    "extensions/stats",
    "extensions/postgis-bridge",
    "examples/rust/runnable-sqlite-demo",
    "tests/extension-smoke",
    "tests/extension-proptest",
]
exclude = [
    # extensions/* with their own [workspace] are intentionally
    # standalone  see the dedupe + survey commits. Keep this list
    # in sync as new standalone crates land.
    "extensions/color",
    "extensions/formats",
    "extensions/iban",
    "extensions/sys-compat",
    "extensions/list",
]

# `cargo build` / `cargo test` at the workspace root operate on
# the native crates only. The wasm crates (cli, sqlite-lib) are
# workspace members so they share the lockfile and dependency
# resolution, but they need `--target wasm32-wasip2` and the
# wasi-sdk env, so building them by default from the root would
# trip on the C compiler. To build them explicitly:
#
#   cd cli && cargo build --release           # uses per-crate .cargo/config.toml
#   cargo build -p sqlite-cli --target wasm32-wasip2  # from root
default-members = ["host"]

# Workspace-level release-profile tuning. LTO collapses sqlite3 +
# rust glue + extension thunks across crate boundaries; codegen-units=1
# unlocks more aggressive inlining at the cost of build parallelism
# (~30 s slower clean builds, but the cli's hot loop is sqlite3
# internal code where every fold helps).
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false
strip = true
