[package]
name = "sqlite-cli-rust"
version = "0.1.0"
edition = "2021"
publish = false
description = "Reactor-shape Rust port of the SQLite CLI. Targets the sqlite-cli-reactor world; async-stackful lifts (needed for spi.execute re-entry) are this crate's reason for existing."

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
# bundled compiles sqlite3.c via the cc crate against the active
# target (wasm32-wasip2 under cargo-component). The unblocker for
# the whole port — if this fails we need a different integration.
rusqlite = { version = "0.32", features = ["bundled", "functions", "hooks", "collation"] }
# Exposes sqlite3_complete for is_statement_complete. Same major
# version as rusqlite's transitive dep so no double-link.
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

[package.metadata.component]
package = "sqlite:cli-rust"

[package.metadata.component.target]
path = "../wit"
world = "sqlite-cli-reactor"

[package.metadata.component.target.dependencies]
"sqlite:extension" = { path = "../wit/deps/sqlite-extension" }
