[package]
name = "sqlite-cli-rust"
version = "0.1.0"
edition = "2021"
publish = false
description = "Command-mode SQLite CLI for wasm32-wasip2. Exports wasi:cli/run; any wasi:p2 host can drive it."

[lib]
crate-type = ["cdylib"]

[dependencies]
# wit-bindgen-rt provides the runtime support functions the
# generate! macro emits calls to. Sync bindings — no `async`
# feature needed now that the live-SPI bridge is gone.
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
# Bindings are produced inline in src/lib.rs via wit_bindgen::generate!.
wit-bindgen = { version = "0.44", features = ["macros"] }
# Shared SQLite wrapper — owns the libsqlite3-sys bundled compile.
sqlite-wasm-core = { path = "../core" }
# Needed directly for sqlite3_complete + SQLITE_* action codes used
# by the in-WASM authorizer dispatch.
libsqlite3-sys = { version = "0.30" }

# Component packaging: after `cargo build --release --target
# wasm32-wasip2`, run
#   wasm-tools component new \
#     target/wasm32-wasip2/release/sqlite_cli_rust.wasm \
#     -o target/wasm32-wasip2/release/sqlite_cli_rust.component.wasm
# No adapter needed — wasm32-wasip2 IS the component-model target.
# The wasm-tools wrap is purely to add the component-section header
# (the rustc output is a core module that uses wasip2 imports).
