[package]
name = "sqlite-cli"
version = "0.1.0"
edition = "2021"
publish = false
description = "Command-mode SQLite CLI for wasm32-wasip2. Exports wasi:cli/run; any wasi:p2 host can drive it."

[lib]
crate-type = ["cdylib"]

# The cli's TVM-track deps unconditionally use wit-bindgen-backed
# `tvm:memory` regions on wasm32  the cli component therefore
# always imports tvm:memory/{types,manager,bytes,diagnostics}.
# Every host running the cli MUST wire tvm-wasmtime's
# add_to_linker (our reference sqlite-wasm-host does so by
# default).

[dependencies]
# wit-bindgen-rt provides the runtime support functions the
# generate! macro emits calls to. Sync bindings — no `async`
# feature needed now that the live-SPI bridge is gone.
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
# Bindings are produced inline in src/lib.rs via wit_bindgen::generate!.
wit-bindgen = { version = "0.44", features = ["macros"] }
# Shared SQLite wrapper — owns the libsqlite3-sys bundled compile.
sqlite-wasm-core = { path = "../core" }
# TVM-track integrations  installed at startup so the trampolines
# are always active. With default features they all use in-proc
# backends (rough parity with the SQLite defaults). The `tvm`
# feature on this crate flips them to wit-bindgen-backed
# tvm:memory variants  the cli component then imports
# tvm:memory and the host must wire tvm-wasmtime.
sqlite-pcache-tvm = { path = "../sqlite-pcache-tvm" }
sqlite-mem-tvm = { path = "../sqlite-mem-tvm" }
sqlite-vfs-tvm = { path = "../sqlite-vfs-tvm" }
# Needed directly for sqlite3_complete + SQLITE_* action codes used
# by the in-WASM authorizer dispatch. The cli also calls sqlite3session_*
# (see cli/src/dot.rs `.session`) via manual extern decls  the
# `session` feature on libsqlite3-sys forces buildtime_bindgen which
# fails to cross-compile to wasm32-wasip2. The bundled sqlite3.c IS
# compiled with -DSQLITE_ENABLE_SESSION (core's session feature), so
# the symbols are present; we just declare them by hand.
libsqlite3-sys = { version = "0.38" }
# .sha3sum uses SHA3-256 over a canonical encoding of every row
# of every table. Pure Rust impl works on wasm32-wasip2 unchanged.
sha3 = { version = "0.10", default-features = false }
# .archive (SQLAR) uses zlib deflate/inflate for entries that
# shrink when compressed. miniz_oxide is pure-Rust, no_std-friendly,
# no external C dependency — clean wasm32-wasip2 build.
miniz_oxide = { version = "0.8", default-features = false, features = ["with-alloc"] }
# Persistent capability grants (PLAN-grants-db.md G3): integrity-
# pinning by blake3 digest of the extension bytes. Pure-Rust,
# wasm32-wasip2 clean.
blake3 = { version = "1", default-features = false }
# Embedded extensions  optional; off by default. When an `embed-*`
# feature is on, the cli depends on the extension's rlib crate
# (not the wasi component) and calls its `embed::register_into(db)`
# at startup. Same scalar surface; no WIT boundary on the hot path.
# Add a new embed-* feature alongside its dep when adopting more
# extensions. See PLAN-embed-extensions.md for the contract.
# Shared embed helpers. Carried unconditionally so cli code can
# reference its types in shared bodies; the dep is cheap (no
# bundled compile, just the FFI thunks + value glue) and gating
# it on a feature would force every embed-* feature to also
# list it.
sqlite-embed = { path = "../sqlite-embed" }
sha3-extension  = { path = "../extensions/sha3",  optional = true, features = ["embed"], default-features = false }
uuid-extension  = { path = "../extensions/uuid",  optional = true, features = ["embed"], default-features = false }
crc-extension   = { path = "../extensions/crc",   optional = true, features = ["embed"], default-features = false }
baseN-extension = { path = "../extensions/baseN", optional = true, features = ["embed"], default-features = false }
color-extension = { path = "../extensions/color", optional = true, features = ["embed"], default-features = false }
ean-extension   = { path = "../extensions/ean",   optional = true, features = ["embed"], default-features = false }

[features]
# Family-of-features layout: each embeddable extension gets its own
# feature flag so users can compose exactly what they want. Default
# build has NONE of them on  identical to the pre-embed cli.
embed-sha3  = ["dep:sha3-extension"]
embed-uuid  = ["dep:uuid-extension"]
embed-crc   = ["dep:crc-extension"]
embed-baseN = ["dep:baseN-extension"]
embed-color = ["dep:color-extension"]
embed-ean   = ["dep:ean-extension"]

# Component packaging: after `cargo build --release --target
# wasm32-wasip2`, run
#   wasm-tools component new \
#     target/wasm32-wasip2/release/sqlite_cli.wasm \
#     -o target/wasm32-wasip2/release/sqlite_cli.component.wasm
# No adapter needed — wasm32-wasip2 IS the component-model target.
# The wasm-tools wrap is purely to add the component-section header
# (the rustc output is a core module that uses wasip2 imports).
